- Fixed a problem with biomes not being used correctly. Resulting in most dimensions using just plains biome - Fixed a problem with the biome source not correctly returning the biomes to use. This could causes issues with modded biomes